--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 -->
 </style> 
 <center><br><br><br><br><HEAD> 
-<title>钟爱淑淑</title> 
-<h1 id="r1">亲爱的淑淑，在未来的日子里，也许什么都无法确定，但唯一可以确定的是，我爱的人是你</h1>  
+<title>挚爱叶子</title> 
+<h1 id="r1">亲爱的小叶同学，在未来的日子里，也许什么都无法确定，但唯一可以确定的是，我爱的人是你</h1>  
 <style type="text/css"> 
 /* Circle Text Styles */
 #outerCircleText {
@@ -19,7 +19,7 @@ color: #1400FF;
 <script type="text/javascript"> 
 ;(function(){
 // Your message here (QUOTED STRING)
-var msg = "20211202是对称日，而你是我对的人，称的心";
+var msg = "唯爱小叶";
 // Set font's style size for calculating dimensions
 // Set to number of desired pixels font size (decimal and negative numbers not allowed)
 var size = 24;
@@ -212,7 +212,7 @@ var myRainbowSpan=new RainbowSpan(r1, 0, 360, 255, 50, 18); //apply static rainb
 myRainbowSpan.timer=window.setInterval("myRainbowSpan.moveRainbow()", myRainbowSpan.speed);
 </script> 
 <div align="center"> 
-<p class="STYLE1" id="r2">我喜欢你，真的很喜欢，就像向日葵如此依赖太阳一般的喜欢。</p> 
+<p class="STYLE1" id="r2">宝贝，我错了，对不起，昨晚惹你不高兴了</p> 
 </div> 
 <script type="text/javascript"> 
 var r2=document.getElementById("r2"); //get span to apply rainbow
@@ -222,7 +222,7 @@ myRainbowSpan2.timer=window.setInterval("myRainbowSpan2.moveRainbow()", myRainbo
 </html> 
   <html> 
 <body bgcolor="#000000"> 
-<body onContextMenu="alert('罗淑丽 我爱你'); return false" NOOP="if (window.event != null && window.event.button == 2) alert ('Thanks...');"> 
+<body onContextMenu="alert('叶香平 我爱你'); return false" NOOP="if (window.event != null && window.event.button == 2) alert ('Thanks...');"> 
 <style type="text/css"> 
 /* Circle Text Styles */
 #outerCircleText {
@@ -329,7 +329,7 @@ else if (window.attachEvent){
 <center><div style="border: 2px solid ; overflow: auto; color: black; background-color: black; width: 80%;"> 
 <h2> 
 <center> 
-<script language="JavaScript1.2">var message="那么，你能答应，和我永远在一起吗？"
+<script language="JavaScript1.2">var message="昨天晚上？"
 var neonbasecolor="white"
 var neontextcolor="red"
 var flashspeed=100  //in milliseconds
@@ -372,7 +372,7 @@ beginneon()
 </script></h2> 
 <img src="51bbw.cn.jpg" align="middle" border="0"><br /> 
     <td><center> 
-<FONT face="Monotype Corsiva" size="3" color="#ffffff"> 我只想给你一颗真心,<br>我只想努力去疼爱你,<br>我只想一辈子陪伴你,<br>我想说 我爱你.表达出我自己的意思,不想憋在心里,<br>我想要和你一起慢慢变老<br>我不要短暂的温存,只要你一世的陪伴
+<FONT face="Monotype Corsiva" size="3" color="#ffffff">你说冷的时候，我应该立马关空调,<br>你出去的时候，我应该赶紧出去不该让你一个人在外面那么久,<br>你开门进房间的时候，我不该推你,<br>我想说 我真的错了.老婆，对不起,<br>我以后不会这样了，我改正！<br>宇宙中最美丽最好的小叶同学，求求你原谅我好嘛
 <tr> 
 </tr> 
 </table> 
