--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ var myRainbowSpan=new RainbowSpan(r1, 0, 360, 255, 50, 18); //apply static rainb
 myRainbowSpan.timer=window.setInterval("myRainbowSpan.moveRainbow()", myRainbowSpan.speed);
 </script> 
 <div align="center"> 
-<p class="STYLE1" id="r2">宝贝，我错了，对不起，昨晚惹你不高兴了</p> 
+<p class="STYLE1" id="r2">我想了很多很多，认真的反省了我自己</p> 
 </div> 
 <script type="text/javascript"> 
 var r2=document.getElementById("r2"); //get span to apply rainbow
@@ -329,7 +329,7 @@ else if (window.attachEvent){
 <center><div style="border: 2px solid ; overflow: auto; color: black; background-color: black; width: 80%;"> 
 <h2> 
 <center> 
-<script language="JavaScript1.2">var message="昨天晚上？"
+<script language="JavaScript1.2">var message="宝贝，我错了，对不起，昨晚惹你不高兴了"
 var neonbasecolor="white"
 var neontextcolor="red"
 var flashspeed=100  //in milliseconds
